0Auth addition and swagger docs update
